--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Hello world</h1>
+        <a href="folder/a.html">go to a.html</a>
         <Comp />
     </body>
 </html>
