--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -9,6 +9,6 @@
         <h1>Hello world</h1>
         <a href="folder/a.html">go to a.html</a>
         <Comp />
-        <{a} />
+        <{Something} />
     </body>
 </html>
