--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1>Hello world</h1>
-        <a href="folder/a.html">go to a.html</a>
+        <a href="folder/a.html">go fjdklasfjdklsfjdklsto a.html</a>
         <Comp />
-        <{Something} />
+        <-{Something} /> else <-{Something} /> else
     </body>
 </html>
