--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -6,9 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello world</h1>
-        <a href="folder/a.html">go fjdklasfjdklsfjdklsto a.html</a>
-        <Comp />
-        <-{Something} /> else <-{Something} /> else
+        <p>Hello world</p>
+        <-{Something} />
+        <HelloWorld />
     </body>
 </html>
