--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -8,6 +8,6 @@
     <body>
         <p>Hello world</p>
         <-{Something} />
-        <HelloWorld />
+        <HelloWold />
     </body>
 </html>
