--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>Hello world</p>
+        <HelloWorld />
         <-{Something} />
-        <HelloWold />
     </body>
 </html>
