--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -6,8 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-        <p>Hello world</p>
+        <p>Hello world something</p>
         <HelloWorld />
+        <p>And this is something else live</p>
         <-{Something} />
     </body>
 </html>
