--- a/example/src/pages/page.html
+++ b/example/src/pages/page.html
@@ -6,9 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <p>Hello world something</p>
-        <HelloWorld />
-        <a href="/page.html">page</a>
-        <-{Something} />
+        <p>This is from Some</p>
+        <a href="/index.html">page</a>
     </body>
 </html>
