--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./output.css" rel="stylesheet" />
         <title>Document</title>
     </head>
     <body>
-        <p>Hello world something</p>
+        <p class="bg-red-500">Hello world somfjdkslfjdkslething eltse</p>
         <HelloWorld />
+        <!-- <Helloorld /> -->
+        <!-- Hello world -->
         <a href="/page.html">page</a>
         <-{Something} />
     </body>
