--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -1,12 +1,17 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Demo</title>
-</head>
-<body>
-  <h1>Welcome to simple. Take a look at <a href="https://github.com/Tnixc/simple">the github</a> to get started</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Simple Demo</title>
+    </head>
+    <body>
+        <h1>
+            Welcome to simple. Take a look at
+            <a href="https://github.com/Tnixc/simple">the github</a> to get
+            started
+        </h1>
+        <Comp>
+        <h1>Hello world</h1>
+    </body>
 </html>
