--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simple Demo</title>
+        <link rel="stylesheet" href="./output.css" />
     </head>
     <body>
+        <main class="container bg-red-200 p-40 shadow-xl something">
+        <h1 class="bg-blue-500">Hello world v4 top ten aint</h1>
         <h1>
             Welcome to simple. Take a look at
             <a href="https://github.com/Tnixc/simple">the github</a> to get
@@ -13,5 +16,6 @@
         </h1>
         <Comp>
         <h1>Hello world</h1>
+        </main>
     </body>
 </html>
