--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -5,7 +5,14 @@
         <title>Document</title>
     </head>
     <body>
-        <Comp prop="value1"></Comp>
-        <Self />
+        <Some k="v" prop="value" />
+        <Some
+            k="v"
+            prop="value"
+            prop="value"
+            prop="value"
+            prop="value"
+            prop="`value`"
+        />
     </body>
 </html>
