props are working for self closing components

--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -5,14 +5,7 @@
         <title>Document</title>
     </head>
     <body>
-        <Some k="v" prop="value" />
-        <Some
-            k="v"
-            prop="value"
-            prop="value"
-            prop="value"
-            prop="value"
-            prop="`value`"
-        />
+        <Some k="v" />
+        <Some k="X" prop="value" />
     </body>
 </html>
