update folder parsing

--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -5,7 +5,7 @@
         <title>Document</title>
     </head>
     <body>
-        <Some k="v" />
-        <Some k="X" prop="value" />
+        <Folder:Some k="v" />
+        <Folder:Some k="X" prop="value" />
     </body>
 </html>
