--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -3,9 +3,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./output.css" />
     </head>
-    <body>
+    <body class="selection:bg-blue-500">
+        <h1 class="dark:bg-black shadow-xl bg-red-400/40 p-2 rounded-2xl w-fit">Hello world, now this should be quicker correct?</h1>
         <Folder:Some k="v" />
         <Folder:Some k="X" prop="value" />
+        <-{T} />
     </body>
 </html>
