I GOT PROPS AND SLOTS WORKING

--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -10,5 +10,9 @@
         <Folder:Some k="v" />
         <Folder:Some k="X" prop="value" />
         <-{T} />
+        <h1>Hello world</h1>
+        <Without key="without">
+            <With key="value"></With>
+        </Without>
     </body>
 </html>
