--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -5,8 +5,10 @@
         <title>Document</title>
         <link rel="stylesheet" href="./output.css" />
     </head>
-    <body class="selection:bg-blue-500">
-        <h1 class="dark:bg-black shadow-xl bg-red-400/40 p-2 rounded-2xl w-fit">Hello world, now this should be quicker correct?</h1>
+    <body class="selection:bg-teal-300">
+        <h1 class="dark:bg-black shadow-xl bg-red-400/40 p-2 rounded-2xl w-fit">
+            Hello world, now this should be quicker correct? and I'm not gonna lie it's really fast
+        </h1>
         <Folder:Some k="v" />
         <Folder:Some k="X" prop="value" />
         <-{T} />
@@ -14,5 +16,14 @@
         <Without key="without">
             <With key="value"></With>
         </Without>
+        <markdown>
+        # Hello world
+
+        paragraph?
+
+        ```js
+        console.log("Hi");
+        ```
+        </markdown>
     </body>
 </html>
