--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -1,29 +1,14 @@
+
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./output.css" />
-    </head>
-    <body class="selection:bg-teal-300">
-        <h1 class="dark:bg-black shadow-xl bg-red-400/40 p-2 rounded-2xl w-fit">
-            Hello world, now this should be quicker correct? and I'm not gonna lie it's really fast
-        </h1>
-        <Folder:Some k="v" />
-        <Folder:Some k="X" prop="value" />
-        <-{T} />
-        <h1>Hello world</h1>
-        <Without key="without">
-            <With key="value"></With>
-        </Without>
-        <markdown>
-        # Hello world
-
-        paragraph?
-
-        ```js
-        console.log("Hi");
-        ```
-        </markdown>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Demo</title>
+</head>
+<body>
+  <h1>Welcome to simple. Take a look at <a href="https://github.com/Tnixc/simple">the github</a> to get started</h1>
+  <Thing />
+  <Circle />
+</body>
 </html>
