--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -5,8 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Demo</title>
+  <style>#a{color: red}*{padding-left: 3rem}</style>
 </head>
 <body>
   <h1>Welcome to simple. Take a look at <a href="https://github.com/Tnixc/simple">the github</a> to get started</h1>
+  <Hello />
+  <Slot><h1 id="a">hi inside the slot</h1></Slot>
+  <Prop class='el"sde' something="props passing" />
+  <Slot></Slot>
+  <h1>hi from index</h1>
 </body>
 </html>
