get websockets reloading to work

--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -13,6 +13,6 @@
   <Slot><h1 id="a">hi inside the slot</h1></Slot>
   <Prop class='el"sde' something="props passing" />
   <Slot></Slot>
-  <h1>hi from index</h1>
+  <h1>hi saldkfj from index</h1>
 </body>
 </html>
