--- a/src/dev/inline_script.html
+++ b/src/dev/inline_script.html
@@ -1,9 +1,9 @@
 <script>
-console.log('hi');
 const socket = new WebSocket('ws://localhost:2727');
 
 socket.onmessage = (event) => {
   const data = JSON.parse(event.data);
+  console.log(data);
   if (data.action === 'reload') {
     window.location.reload();
   }
