complete showing errors on browser via ws

--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <h1>Welcome to simple. Take a alook at <a href="https://github.com/Tnixc/simple">the github</a> to get started</h1>
-  <Hello />
+  <Helxlo />
   <Slot><h1 id="a">hi insidethe slot</h1></Slot>
   <Prop class='el"sde' something="props passing" />
-  <h1>haa fromaa ide</h1>
-<A />
+  <h1>haa fromaa idaaaaaaaa</h1>
+  <A />
 </body>
 </html>
