fix: dev propagation

--- a/src/dev/inline_script.html
+++ b/src/dev/inline_script.html
@@ -1,4 +1,5 @@
 <script>
+  // * SCRIPT INCLUDED IN DEV MODE
   const socket = new WebSocket("ws://localhost:2727");
 
   function convertAnsiToHtml(input) {
