--- a/src/dev/inline_script.html
+++ b/src/dev/inline_script.html
@@ -9,4 +9,83 @@
       console.error(data.message);
     }
   };
+  class MarkdownEditor {
+      constructor(element, content) {
+          this.element = element;
+          this.originalContent = content;
+          this.setupEditor();
+      }
+
+      setupEditor() {
+          this.element.addEventListener('dblclick', () => {
+              // Create modal with editor
+              const modal = document.createElement('div');
+              modal.style.cssText = `
+                  position: fixed;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  background: rgba(0,0,0,0.7);
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  z-index: 1000;
+              `;
+
+              const editor = document.createElement('div');
+              editor.style.cssText = `
+                  width: 80%;
+                  height: 80%;
+                  background: white;
+                  padding: 20px;
+                  border-radius: 8px;
+                  display: flex;
+                  flex-direction: column;
+              `;
+
+              const textarea = document.createElement('textarea');
+              textarea.style.cssText = `
+                  width: 100%;
+                  height: calc(100% - 50px);
+                  font-family: monospace;
+                  padding: 10px;
+                  resize: none;
+              `;
+              textarea.value = this.originalContent;
+
+              const buttonContainer = document.createElement('div');
+              buttonContainer.style.cssText = `
+                  display: flex;
+                  gap: 10px;
+                  margin-top: auto;
+                  justify-content: flex-end;
+              `;
+
+              const saveButton = document.createElement('button');
+              saveButton.textContent = 'Save';
+              saveButton.onclick = () => {
+                  socket.onopen = () => {
+                      socket.send(JSON.stringify({
+                          type: 'markdown_update',
+                          content: textarea.value,
+                          originalContent: this.originalContent
+                      }));
+                  };
+                  modal.remove();
+              };
+
+              const cancelButton = document.createElement('button');
+              cancelButton.textContent = 'Cancel';
+              cancelButton.onclick = () => modal.remove();
+
+              buttonContainer.appendChild(cancelButton);
+              buttonContainer.appendChild(saveButton);
+              editor.appendChild(textarea);
+              editor.appendChild(buttonContainer);
+              modal.appendChild(editor);
+              document.body.appendChild(modal);
+          });
+      }
+  }
 </script>
