--- a/src/dev/inline_script.html
+++ b/src/dev/inline_script.html
@@ -1,115 +1,184 @@
 <script>
   // * SCRIPT INCLUDED IN DEV MODE
-  const socket = new WebSocket("ws://localhost:2727");
-  socket.onmessage = (event) => {
-    const data = JSON.parse(event.data);
-    if (data.message === "reload") {
-      setTimeout(() => window.location.reload(), 100);
-    } else {
-      console.error(data.message);
+  class DevWebSocket {
+    constructor() {
+      this.socket = new WebSocket("ws://localhost:2727");
+      this.initializeHandlers();
     }
-  };
+
+    initializeHandlers() {
+      this.socket.onmessage = (event) => {
+        const data = JSON.parse(event.data);
+        if (data.message === "reload") {
+          setTimeout(() => window.location.reload(), 100);
+        } else {
+          console.error(data.message);
+        }
+      };
+    }
+
+    send(data) {
+      this.socket.send(JSON.stringify(data));
+    }
+  }
+
   class MarkdownEditor {
     constructor(element) {
       this.element = element;
       this.originalContent = element.getAttribute("data-markdown-source");
-      console.log("Initializing editor with content:", this.originalContent);
-      this.setupEditor();
+      this.devSocket = new DevWebSocket();
+      this.isDarkMode = window.matchMedia("(prefers-color-scheme: dark)").matches;
+      this.initializeEditor();
     }
 
-    setupEditor() {
-      this.element.addEventListener("dblclick", () => {
-        console.log("Opening editor with content:", this.originalContent);
+    get themes() {
+      return {
+        dark: {
+          modal: "rgba(0,0,0,0.7)",
+          editor: "#100F0F",
+          textarea: "#1C1B1B",
+          text: "#CECDC3"
+        },
+        light: {
+          modal: "rgba(0,0,0,0.5)",
+          editor: "#E6E4D9",
+          textarea: "#FFFCF0",
+          text: "#100F0F"
+        }
+      };
+    }
 
-        // Create modal with editor
-        const modal = document.createElement("div");
-        modal.style.cssText = `
-                            position: fixed;
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            background: rgba(0,0,0,0.7);
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            z-index: 1000;
-                            `;
+    get currentTheme() {
+      return this.themes[this.isDarkMode ? 'dark' : 'light'];
+    }
 
-        const editor = document.createElement("div");
-        editor.style.cssText = `
-                            width: min(1200px, 90vw);
-                            height: calc(100vh - 100px);
-                            background: #100F0F;
-                            color: #CECDC3;
-                            padding: 20px;
-                            border-radius: 8px;
-                            display: flex;
-                            flex-direction: column;
-                            gap: 20px;
-                            `;
+    createModalElement() {
+      const modal = document.createElement("div");
+      modal.style.cssText = `
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: ${this.currentTheme.modal};
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+      `;
+      return modal;
+    }
 
-        const textarea = document.createElement("textarea");
-        textarea.style.cssText = `
-                                flex: 1;
-                                font-family: monospace;
-                                background: #1C1B1B;
-                                color: #CECDC3;
-                                padding: 10px;
-                                border: none !important;
-                                outline: none !important;
-                                resize: none;
-                                `;
-        textarea.value = this.originalContent;
+    createEditorContainer() {
+      const editor = document.createElement("div");
+      editor.style.cssText = `
+        width: min(1200px, 90vw);
+        height: calc(100vh - 100px);
+        background: ${this.currentTheme.editor};
+        color: ${this.currentTheme.text};
+        padding: 20px;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      `;
+      return editor;
+    }
 
-        const buttonContainer = document.createElement("div");
-        buttonContainer.style.cssText = `
-                                        display: flex;
-                                        gap: 10px;
-                                        justify-content: flex-end;
-                                        `;
+    createTextArea() {
+      const textarea = document.createElement("textarea");
+      textarea.style.cssText = `
+        flex: 1;
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+        background: ${this.currentTheme.textarea};
+        color: ${this.currentTheme.text};
+        padding: 16px;
+        border: none !important;
+        outline: none !important;
+        resize: none;
+        border-radius: 4px;
+        font-size: 14px;
+        line-height: 1.5;
+      `;
+      textarea.value = this.originalContent;
+      return textarea;
+    }
 
-        const saveButton = document.createElement("button");
-        saveButton.textContent = "Save";
-        saveButton.onclick = () => {
-          console.log("Sending update:", {
-            type: "markdown_update",
-            content: textarea.value,
-            originalContent: this.originalContent,
-          });
-          socket.send(
-            JSON.stringify({
-              type: "markdown_update",
-              content: textarea.value,
-              originalContent: this.originalContent,
-            }),
-          );
-          modal.remove();
-        };
+    createButton(text, isPrimary = false) {
+      const button = document.createElement("button");
+      button.textContent = text;
+      button.style.cssText = `
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: 500;
+        transition: opacity 0.2s ease;
+        background: ${isPrimary ? '#376EAD' : 'transparent'};
+        color: ${isPrimary ? '#ffffff' : this.currentTheme.text};
+        opacity: ${isPrimary ? '1' : '0.7'};
+      `;
+      button.onmouseenter = () => button.style.opacity = isPrimary ? '0.8' : '1';
+      button.onmouseleave = () => button.style.opacity = isPrimary ? '1' : '0.5';
+      return button;
+    }
 
-        const cancelButton = document.createElement("button");
-        cancelButton.textContent = "Cancel";
-        cancelButton.onclick = () => modal.remove();
+    createButtonContainer() {
+      const container = document.createElement("div");
+      container.style.cssText = `
+        display: flex;
+        gap: 10px;
+        justify-content: flex-end;
+      `;
+      return container;
+    }
 
-        buttonContainer.appendChild(cancelButton);
-        buttonContainer.appendChild(saveButton);
-        editor.appendChild(textarea);
-        editor.appendChild(buttonContainer);
-        modal.appendChild(editor);
-        document.body.appendChild(modal);
-      });
+    handleSave(textarea, modal) {
+      const updateData = {
+        type: "markdown_update",
+        content: textarea.value,
+        originalContent: this.originalContent,
+      };
+      this.devSocket.send(updateData);
+      modal.remove();
+    }
+
+    openEditor() {
+      const modal = this.createModalElement();
+      const editor = this.createEditorContainer();
+      const textarea = this.createTextArea();
+      const buttonContainer = this.createButtonContainer();
+
+      const saveButton = this.createButton("Save", true);
+      const cancelButton = this.createButton("Cancel");
+
+      saveButton.onclick = () => this.handleSave(textarea, modal);
+      cancelButton.onclick = () => modal.remove();
+
+      buttonContainer.append(cancelButton, saveButton);
+      editor.append(textarea, buttonContainer);
+      modal.appendChild(editor);
+      document.body.appendChild(modal);
+
+      // Focus textarea after modal is shown
+      setTimeout(() => textarea.focus(), 0);
+    }
+
+    initializeEditor() {
+      this.element.addEventListener("dblclick", () => this.openEditor());
+
+      // Listen for system theme changes
+      window.matchMedia("(prefers-color-scheme: dark)")
+        .addEventListener("change", (e) => {
+          this.isDarkMode = e.matches;
+        });
     }
   }
 
   // Initialize markdown editors after page load
   document.addEventListener("DOMContentLoaded", () => {
-    const markdownElements = document.querySelectorAll(
-      "div[data-markdown-source]",
-    );
-    console.log("Found markdown elements:", markdownElements.length);
-    markdownElements.forEach((element) => {
-      new MarkdownEditor(element);
-    });
+    const markdownElements = document.querySelectorAll("div[data-markdown-source]");
+    markdownElements.forEach(element => new MarkdownEditor(element));
   });
 </script>
-
