more ports stuff

--- a/src/dev/inline_script.html
+++ b/src/dev/inline_script.html
@@ -2,7 +2,7 @@
   // * SCRIPT INCLUDED IN DEV MODE
   class DevWebSocket {
     constructor() {
-      this.socket = new WebSocket("ws://localhost:27272");
+      this.socket = new WebSocket("ws://0.0.0.0:27272");
       this.initializeHandlers();
     }
 
