--- a/example/src/pages/index.html
+++ b/example/src/pages/index.html
@@ -68,7 +68,10 @@
     <h1>🚀 My Blog</h1>
     <p class="subtitle">Powered by Simple - A lightweight static site generator</p>
   </header>
+<markdown>
+# Hello world
 
+</markdown>
   <main class="posts">
     <-Template{Posts} />
   </main>
